@@ -24,22 +24,21 @@ from xbmcvfs import exists
 _id_ = 'plugin.video.faros.on-air'
 
 if 'CEMC' in getInfoLabel('System.FriendlyName'):
+
     executebuiltin('RunAddon({0})'.format(_id_))
 
-if 'CEMC' in getInfoLabel(
-    'System.FriendlyName'
-) and exists(translatePath(
-    'special://home/addons/{0}/addon.xml'.format(_id_))
-) and exists(translatePath(
-    'special://profile/keymaps/farosonair.xml')
-):
+    if exists(
+            translatePath('special://home/addons/{0}/addon.xml'.format(_id_))
+    ) and exists(
+        translatePath('special://profile/keymaps/farosonair.xml')
+    ):
 
-    with open(translatePath('special://profile/keymaps/farosonair.xml'), 'r') as f:
-        keymap_file = f.read()
+        with open(translatePath('special://profile/keymaps/farosonair.xml'), 'r') as f:
+            keymap_file = f.read()
 
-    if 'home' not in keymap_file:
-        with open(translatePath('special://profile/keymaps/farosonair.xml'), 'w') as f:
-            f.write(keymap_file.replace('xbmc', 'home'))
+        if 'home' not in keymap_file:
+            with open(translatePath('special://profile/keymaps/farosonair.xml'), 'w') as f:
+                f.write(keymap_file.replace('xbmc', 'home'))
 
 else:
 
