@@ -2,7 +2,7 @@
     <category label="General">
         <setting id="show_exit_button" label="30035" type="bool" default="true"/>
         <setting id="external_action" label="30033" type="bool" default="false"/>
-        <setting id="browser" label="30034" type="select" values="Chrome|Opera Mobile|Opera Mini|Firefox|UC Browser" default="Chrome"/>
+        <setting id="browser" label="30034" type="select" values="DefaultChrome|Opera Mobile|Opera Mini|Firefox|UC Browser" default="Default"/>
         <setting label="30019" type="action" action="RunPlugin(plugin://$ID/?action=lang_choice)"/>
         <setting label="30023" type="action" action="RunPlugin(plugin://$ID/?action=check_updates)"/>
         <setting label="30015" type="action" action="RunPlugin(plugin://$ID/?action=cache_clear)"/>
