@@ -1,3 +1,7 @@
+12-01-2018 - [B]1.0.4[/B]
+- Addon: Set region according to language
+- Skin: Set options according to current state on every fresh start
+
 08-01-2018 - [B]1.0.3[/B]
 - Re-applied bookmarks function for non-standalone setups
 - Navigator function root menu tweaks
